deployment.yaml
apiVersion: apps/v1
#apiVersion: v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: solo
  name: solo
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      run: solo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: solo
    spec:
      containers:
      - image: hbr.zifuy.cn/test/solo:v1.3
        name: solo
        resources:
          requests:
            memory: "2Gi"
            cpu: "500m"
          limits:
            memory: "4Gi"
            cpu: "800m"
status: {}
