service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solo
  namespace: dev
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
      targetPort: 8080
  selector:
    app: solo
