ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: solo
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: solo.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: solo
          servicePort: web
